# pathfinder

./: .gitignore  CMakeLists.txt  README.md
docs/: index.html  styles.css
include/pathfinder/: pathfinder.hpp
include/pathfinder/autonomous/: autonomous.hpp  boomerang.hpp  catmull_rom.hpp  drive_command.hpp  move_to.hpp  pure_pursuit.hpp  turn_to.hpp
include/pathfinder/calibration/: auto_pid.hpp  calibration.hpp  drift_coeff.hpp  wheel_finder.hpp
include/pathfinder/chassis/: chassis.hpp  chassis_class.hpp  controller_settings.hpp  drive_config.hpp  localization_kind.hpp  move_options.hpp  opcontrol_modes.hpp
include/pathfinder/controllers/: controllers.hpp  exit_conditions.hpp  feed_forward.hpp  motion_profile.hpp  pid.hpp  slew_limiter.hpp
include/pathfinder/driving/: driving.hpp  interfaces.hpp  mocks.hpp  motor_group.hpp
include/pathfinder/geometry/: angle.hpp  bot.hpp  footprint.hpp  geometry.hpp  matrix3.hpp  matrix6.hpp  named_point.hpp  params.hpp  pose2.hpp  vector2.hpp
include/pathfinder/odometry/: dead_reckoning.hpp  ekf.hpp  field_map.hpp  i_localizer.hpp  localizers.hpp  mcl.hpp  odometry.hpp
include/pathfinder/pros/: all.hpp  factories.hpp  pros_controller.hpp  pros_distance.hpp  pros_gps.hpp  pros_imu.hpp  pros_motor.hpp  pros_rotation.hpp
include/pathfinder/runtime/: telemetry.hpp
pros_template/: README.md  package.sh  template.pros
pros_template/src/: main.cpp
tests/: CMakeLists.txt
tests/autonomous/: CMakeLists.txt  sim_bot.hpp  test_boomerang.cpp  test_catmull_rom.cpp  test_drive_command.cpp  test_move_to.cpp  test_pure_pursuit.cpp  test_turn_to.cpp
tests/calibration/: CMakeLists.txt  test_auto_pid.cpp  test_drift_coeff.cpp  test_wheel_finder.cpp
tests/chassis/: CMakeLists.txt  sim_helpers.hpp  test_chassis_async_throws.cpp  test_chassis_construction.cpp  test_chassis_drift_aware.cpp  test_chassis_follow.cpp  test_chassis_motor_output.cpp  test_chassis_move_to.cpp  test_chassis_named_points.cpp  test_chassis_odometry_pipeline.cpp  test_chassis_opcontrol_rate.cpp  test_chassis_turn_to.cpp
tests/controllers/: CMakeLists.txt  test_exit_conditions.cpp  test_feed_forward.cpp  test_motion_profile.cpp  test_pid.cpp  test_slew_limiter.cpp
tests/driving/: CMakeLists.txt  test_brake_mode.cpp  test_motor_group.cpp
tests/geometry/: CMakeLists.txt  test_angle.cpp  test_bot.cpp  test_footprint.cpp  test_matrix3.cpp  test_matrix6.cpp  test_params.cpp  test_pose2.cpp  test_vector2.cpp
tests/odometry/: CMakeLists.txt  test_dead_reckoning.cpp  test_ekf.cpp  test_field_map.cpp  test_mcl.cpp
tests/runtime/: CMakeLists.txt  test_telemetry_chassis.cpp  test_telemetry_format.cpp
tests/sensors/: CMakeLists.txt  test_corner_to_center.cpp  test_distance_sensor.cpp  test_imu.cpp  test_sensors_builder.cpp  test_tracking_wheel.cpp
(+10 files in other folders)
